feat: WorldManager 4.0.0 - chest GUI rewrite, 1.20.1-26.2 support, Multiverse-addon parity
- Replace the Paper Dialog-based menu (1.21.7+ only) with a custom chest-inventory
  GUI framework (guis/), restoring compatibility down to Paper 1.20.1. Text input
  goes through ChatInput (chat-message capture) after a virtual-anvil approach
  proved unreliable in practice (PrepareAnvilEvent never fires for a non-block
  anvil on this server - see AUDIT.md).
- Fix critical data loss: disconnecting wiped a player's entire linked-inventory
  history across every group, not just the current one.
- Add per-world flags (PvP, mob/animal spawning, weather lock, custom spawn) and
  a world-operation lock preventing pregen/backup/restore/unload/delete from
  racing each other on the same world.
- Add full parity with Multiverse-Core's addon ecosystem: granular per-group
  player profile sharing (inventory/health/hunger/experience/bed-spawn/location,
  chosen independently per group), custom Nether portal coordinate scaling, sign
  portals, and named custom portal regions with permission gating, an optional
  Vault price, and launch velocity.
- Add guided, clickable command help (/wm sign, /wm pregen, /wm portal) and
  clickable next-step suggestions across command output.
- Numerous smaller bug fixes: integer-division chunk/s stat, pregen radius
  semantics, tab-completion gaps, silently swallowed exceptions, a hardcoded
  Windows build path, and an unquoted-YAML-key lang bug (gui.confirm.yes/no).

Full writeups in AUDIT.md and PATCHNOTES.md.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>